--- a/WaltDisneyManagement/src/main/resources/application.properties
+++ b/WaltDisneyManagement/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.rabbitmq.password=guest
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
+
+
+
+spring.datasource.url = jdbc:mysql://localhost:3306/MMS?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&useSSL=false&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username = user
+spring.datasource.password = user
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.mvc.view.suffix=.html
