--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,14 @@ services:
     depends_on:
       mq:
         condition: service_healthy
+
     environment:
       SPRING_APPLICATION_JSON: '{
+              "spring.datasource.url" : "jdbc:mysql://db:3306/disney?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC",
+              "spring.datasource.username" : "user",
+              "spring.datasource.password" : "user",
+              "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQLDialect",
+              "spring.jpa.hibernate.ddl-auto" : "update",
               "spring.rabbitmq.host" : "mq",
               "spring.rabbitmq.port" : 5672,
               "spring.rabbitmq.username" : "guest",
@@ -53,5 +59,10 @@ services:
     ports:
       - "8080:8000"
 
+
+
+
 volumes:
   datafiles:
+
+
