--- a/WaltDisneyManagement/pom.xml
+++ b/WaltDisneyManagement/pom.xml
@@ -86,6 +86,16 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
+		</dependency>
+
+
+
+
+
 	</dependencies>
 
 
